# rubydns

./: Cargo.toml  README.md  example.yaml  wasi_snapshot_preview1.wasm
examples/: ca.crt  ca.key  ca.tmpl  config.yaml  localhost.crt  localhost.key  server.tmpl
plugin/cache/: Cargo.toml
plugin/cache/src/: cache_key.rs  lib.rs
plugin/plugin-utils/: Cargo.toml
plugin/plugin-utils/src/: lib.rs
plugin/plugin-utils/src/net/: mod.rs  tcp.rs  udp.rs
plugin/proxy/: Cargo.toml
plugin/proxy/src/: lib.rs
rubydns/: Cargo.toml
rubydns/src/: config.rs  lib.rs  main.rs  server.rs
rubydns/src/handle/: udp.rs
rubydns/src/plugins/: config.rs  host_helper.rs  mod.rs  pool.rs
rubydns/src/plugins/host_helper/: mod.rs  tcp.rs  udp.rs
src/: cache.rs  config.rs  layer.rs  lib.rs  main.rs  proxy.rs  utils.rs
src/backend/: group.rs  https.rs  mod.rs  quic.rs  static_file.rs  tls.rs  udp.rs
src/filter/: ecs.rs  static_ecs.rs
src/route/: dnsmasq.rs  mod.rs
src/server/: http.rs  mod.rs  quic.rs  tls.rs  udp.rs
wit/: rubydns.wit
