[package]
name = "edns_proxy"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
arc-swap = "1.8.2"
async-notify = "0.3.4"
axum = { version = "0.8.8", default-features = false, features = ["http2", "tower-log", "tracing"] }
bytes = "1.11.1"
cidr = "0.3.2"
clap = { version = "4.5.59", features = ["derive", "env"] }
compio = { version = "0.18.0", features = ["macros", "net", "quic", "rustls", "signal", "time"] }
compio-quic = { version = "0.7.0", default-features = false, features = ["h3"] }
cyper = { version = "0.8.1", default-features = false, features = ["http2", "http3", "rustls", "stream"] }
cyper-axum = { version = "0.8.0", features = ["http2"] }
deadpool = "0.13.0"
educe = { version = "0.6.0", default-features = false, features = ["Debug"] }
flume = "0.12.0"
futures-util = "0.3.32"
hickory-proto26 = { package = "hickory-proto", version = "0.26.0-alpha.1", git = "https://github.com/hickory-dns/hickory-dns/" }
humantime-serde = "1.1.1"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
itertools = "0.14.0"
mimalloc = "0.1.48"
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
quick_cache = { version = "0.6.18", default-features = false, features = ["ahash"] }
rand = "0.10.0"
rustls = { version = "0.23.36" }
rustls-native-certs = "0.8.3"
rustls-pemfile = "2.2.0"
send_wrapper = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9"
socket2 = "0.6.2"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = "0.3.22"
nix = { version = "0.31.2", features = ["signal"] }

[dependencies.opentelemetry-otlp]
version = "0.31.0"
default-features = false
features = [
    "internal-logs",
    "grpc-tonic",
    "logs",
    "tls",
    "tls-roots",
    "trace",
]
