[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ['cdylib']

[dependencies]
wit-bindgen = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
plugin-utils = { path = "../plugin-utils" }
